--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <div id="booking" class="ride_section layout_padding">
       <div class="container">
         <div class="ride_main">
-          <h1 class="ride_text">Why Ride <span style="color: #f4db31;">With Uloax</span></h1>
+          <h1 class="ride_text">SSSSSSSSSS <span style="color: #f4db31;">With Uloax</span></h1>
       </div>
         </div>
     </div>
